Fix on sidebar z-index
Former-commit-id: afd98e9b26e8f33d38b0b5a0de4f0a228f259004

--- a/styles/components/navigation/sideBar.scss
+++ b/styles/components/navigation/sideBar.scss
@@ -4,7 +4,7 @@
   top: 0;
   height: calc(100vh - #{$header-height});
   width: 314px;
-  z-index: 11;
+  z-index: 0;
 
   * {
     transition: $slow;
@@ -37,6 +37,7 @@
     pointer-events: none;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.08);
     opacity: 0;
+    z-index: 11;
 
     &.open {
       pointer-events: all;
